--- a/index.html
+++ b/index.html
@@ -1,4 +1,57 @@
-<a class="weatherwidget-io" href="https://forecast7.com/tr/37d0335d81/ceyhan/" data-label_1="CEYHAN" data-label_2="WEATHER" data-font="Roboto" data-icons="Climacons" data-theme="random_grey" data-highcolor="#ec6e6e" >CEYHAN WEATHER</a>
+<html> 
+<head>
+    <title>Greeting Message</title> 
+    <style>
+#lbl {
+    font-family: monospace;
+    font-size: xx-large;
+    color: #d4d2d2;
+    padding: 5px;
+    border: 1px solid #ececec;
+    text-align: center;
+    line-height: 1.5;
+    height:85%
+
+
+}
+#date{
+    font-size:large;
+}
+body{
+    background-color: #626262;
+}
+    </style>
+</head>
+<body>
+    <div id="lbl"></div>
+</body>
+
 <script>
-!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
-</script>
+    var weekday = new Array(7);
+    weekday[0] = "Pazar";
+    weekday[1] = "Pazartesi";
+    weekday[2] = "Salı";
+    weekday[3] = "Çarşamba";
+    weekday[4] = "Perşembe";
+    weekday[5] = "Cuma";
+    weekday[6] = "Cumartesi";
+
+    
+    var today = new Date();
+    var hrs = today.getHours();
+    var dayOfWeek = weekday[today.getDay()];
+    var date = dayOfWeek+" " + today.getDate() + "/" +(today.getMonth()+1) +'/'+today.getFullYear()  ;
+
+    var greet;
+
+    if (hrs < 12)
+        greet = 'Günaydın  ';
+    else if (hrs >= 12 && hrs <= 17)
+        greet = 'Tünaydın ';
+    else if (hrs >= 17 && hrs <= 24)
+        greet = 'İyi Akşamlar  ';
+
+    document.getElementById('lbl').innerHTML =
+        greet+=`<div id="date"> Bugün ${date}</div>`;
+</script> 
+</html>
