--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 #lbl {
     font-family: monospace;
     font-size: xx-large;
-    color: #d4d2d2;
+    color: #e9e9e9;
     padding: 5px;
-    border: 1px solid #ececec;
+    border: 1px solid #808485;
     text-align: center;
     line-height: 1.5;
     height:85%
@@ -18,7 +18,7 @@
     font-size:large;
 }
 body{
-    background-color: #626262;
+    background-color: #2f3437;
 }
     </style>
 </head>
@@ -45,11 +45,11 @@ body{
     var greet;
 
     if (hrs < 12)
-        greet = 'Günaydın  ';
+        greet = 'Günaydın EMRE ';
     else if (hrs >= 12 && hrs <= 17)
-        greet = 'Tünaydın ';
+        greet = 'Tünaydın EMRE';
     else if (hrs >= 17 && hrs <= 24)
-        greet = 'İyi Akşamlar  ';
+        greet = 'İyi Akşamlar EMRE ';
 
     document.getElementById('lbl').innerHTML =
         greet+=`<div id="date"> Bugün ${date}</div>`;
