--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Greeting Message</title> 
     <style>
 #lbl {
-    font-family: monospace;
+    font-family: georgia;
     font-size: xx-large;
     color: #e9e9e9;
     padding: 5px;
