--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     font-size: xx-large;
     color: #e9e9e9;
     padding: 5px;
-    border: 1px solid #808485;
+    border: 3px solid #808485;
     text-align: center;
     line-height: 1.5;
     height:85%
@@ -45,11 +45,11 @@ body{
     var greet;
 
     if (hrs < 12)
-        greet = 'Günaydın EMRE ';
+        greet = 'Günaydın EMRE';
     else if (hrs >= 12 && hrs <= 17)
-        greet = 'Tünaydın EMRE';
+        greet = 'İyi Günler EMRE';
     else if (hrs >= 17 && hrs <= 24)
-        greet = 'İyi Akşamlar EMRE ';
+        greet = 'İyi Akşamlar EMRE';
 
     document.getElementById('lbl').innerHTML =
         greet+=`<div id="date"> Bugün ${date}</div>`;
